--- a/public/styles.css
+++ b/public/styles.css
@@ -73,12 +73,54 @@ button {
 
 /* Estilos para os detalhes do elemento */
 .element-details {
-    margin-top: 12px;
-    text-align: center;
+    margin-top: 20px;
     padding: 20px;
+    border: 1px solid transparent;
+    border-radius: 5px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    max-width: 30%;
+    margin-left: auto;
+    margin-right: auto;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
+  }
+  
+  .element-details .atomic-number {
+    font-size: 2em;
+    font-weight: bold;
+    margin-bottom: 2px;
+    text-align: center;
+  }
 
+  .element-details .symbol{
+    font-size: 8em;
+    font-weight: bold;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .element-details .name {
+    font-size: 2.6em;
+    color: #555;
+    margin-bottom: 20px;
+    margin-top: 0;
+  }
+
+  .element-details .label {
+    font-size: 1.2em;
+    color: #555;
+    margin-bottom: 20px;
+    margin-top: 0;
+    padding-top: 0;
+  }
+  
+  .element-details .property {
+    font-size: 1em;
+    margin-bottom: 10px;
+  }
+  
 /* Estilos para as informações do elemento */
 .atomic-number {
     font-size: 0.4vw;
@@ -153,4 +195,51 @@ footer {
     font-weight: 300;
     line-height: 1;
     padding-bottom: 40px;
+}
+
+/* Ajustar a cor de fundo do .element-details */
+.element-details[data-type-id="1"],
+.element-details[data-type-id="11"] {
+    background-color: #faa7a7;
+}
+
+.element-details[data-type-id="2"] {
+    background-color: #e6a749;
+}
+
+.element-details[data-type-id="3"] {
+    background-color: #efc56f;
+}
+
+.element-details[data-type-id="4"] {
+    background-color: #aaff00;
+}
+
+.element-details[data-type-id="5"],
+.element-details[data-type-id="13"] {
+    background-color: #68d8b2;
+}
+
+.element-details[data-type-id="6"] {
+    background-color: #47bbf6;
+}
+
+.element-details[data-type-id="7"] {
+    background-color: #6363d8;
+}
+
+.element-details[data-type-id="8"] {
+    background-color: #c25bf6;
+}
+
+.element-details[data-type-id="9"] {
+    background-color: #f262c2;
+}
+
+.element-details[data-type-id="10"] {
+    background-color: #e77171;
+}
+
+.element-details[data-type-id="12"] {
+    background-color: #7eca7e;
 }
